[package]
name = "quaternion-wrapper"
version = "0.1.0"
authors = ["HamaguRe <hamagure@space-denpa.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HamaguRe/quaternion-wrapper.git"
readme = "README.md"
build = "build.rs"

[features]
default = ["std"]
std = ["quaternion/std", "num-traits/std"]
fma = ["quaternion/fma"]
simd = ["quaternion/simd"]
libm = ["quaternion/libm", "num-traits/libm"]

[dependencies.quaternion]
git = "https://github.com/HamaguRe/quaternion.git"
rev = "d11a34a47771358268b002e66f5293bec4f0fe91"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[build-dependencies]
autocfg = "1"