[package]
name = "quaternion-wrapper"
version = "0.3.1"
authors = ["HamaguRe <hamagure@space-denpa.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HamaguRe/quaternion-wrapper.git"
homepage = "https://github.com/HamaguRe/quaternion-wrapper.git"
documentation = "https://docs.rs/quaternion-wrapper"
description = "Operator overloading allows implementation similar to mathematical expressions."
keywords = ["math", "quaternion", "vector"]
categories = ["mathematics", "science", "no-std"]
readme = "README.md"

[features]
default = ["std"]
std = ["quaternion-core/std", "num-traits/std"]
fma = ["quaternion-core/fma"]
libm = ["quaternion-core/libm", "num-traits/libm"]
norm-sqrt = ["quaternion-core/norm-sqrt"]

[dependencies.quaternion-core]
version = "0.5.2"
default-features = false

[dependencies.num-traits]
version = "0.2.15"
default-features = false
